[package]
name = "tmux-sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12"
pop-launcher = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
futures = "0.3"


